<resources>
    <string name="app_name">Movie and TV Guide</string>
    <string name="action_filter">Filter</string>
    <string name="loading_movies">Loading Shows</string>
    <string name="sort_by">Filter By</string>
    <string name="movie_guide">Movie and TV Guide</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="summary">Summary</string>
    <string name="release_date">Release Date: %s</string>
    <string name="rating">%s/10</string>
    <string name="favorites">Favorites</string>
    <string name="highest_rated_movies">Highest Rated Movies</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="highest_rated_tv">Highest Rated TV Shows</string>
    <string name="most_popular_tv">Most Popular TV Shows</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="nfc_default">Select groups to transfer and tap phones to start NFC transfer\n\nPress back to return</string>
    <string name="uh_oh_you_don_t_have_any_lists">Uh oh! You don\'t have have any lists!</string>
    <string name="nfc_select_all">Select all</string>
    <string name="nfc_unselect_all">Unselect all</string>
</resources>