<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="keyboardHidden|orientation|screenSize"
    android:launchMode="singleTop"> <!-- Ideally only one NFC activity now. -->

    <TextView
        android:id="@+id/tapLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nfc_default"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="20dp"/>

    <Button
        android:id="@+id/selectAll"
        android:layout_below="@id/tapLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nfc_select_all"
        android:padding="5dp" />

    <TextView
        android:id="@+id/noGroups"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/uh_oh_you_don_t_have_any_lists"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="20dp" />
    
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="multipleChoice"
        android:layout_marginTop="-98dp"
        android:id="@+id/allGroups" />
</LinearLayout>